--- a/FIFA23.Scripts.UI/MainWindow.xaml
+++ b/FIFA23.Scripts.UI/MainWindow.xaml
@@ -6,61 +6,84 @@
         xmlns:local="clr-namespace:FIFA23.Scripts.UI"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml" x:Class="FIFA23.Scripts.UI.MainWindow"
         mc:Ignorable="d"
-        Title="FIFA 23 Career Mode Scripts" Height="362" Width="457" Background="#FFEDE7E7" WindowCornerPreference="Default" WindowStyle="ThreeDBorderWindow" ResizeMode="NoResize" ExtendsContentIntoTitleBar="False" Icon="/icons8-script-64.png" >
-
-    <Grid Background="#FFF7F5F5">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="0.41*" />
-            <RowDefinition Height="2*" />
-            <RowDefinition Height="0.5*" />
-
-
-        </Grid.RowDefinitions>
-
-
-        <Menu Grid.Row="0" Grid.ColumnSpan="2" Height="48" Name="menu1" Width="495" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="1,1,1,1" RenderTransformOrigin="0.817,7.003" Foreground="#FFF9F9F9" Background="#FF39393A" Margin="0,0,3,0" ClipToBounds="True">
-            <ui:MenuItem x:Name="File" Header="_File" Margin="10,0,0,0" VerticalAlignment="Top"  Background="#FFFBFBFB">
-                <ui:MenuItem x:Name="OpenButton" Header="_Open" Click="OpenButton_Click"/>
-                <ui:MenuItem x:Name="SaveButton" Header="_Save" Click="SaveButton_Click" />
-            </ui:MenuItem>
-            <ui:MenuItem x:Name="ExitButton" Header="_Exit" Margin="10,0,0,0" Click="ExitButton_Click" />
-
-        </Menu>
-
-        <StackPanel Grid.ColumnSpan="2" Orientation="Vertical"  Grid.Row="1" Margin="0,10,0,0">
-            
-            <Grid Margin="0,40,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Label Content="Set All Players Age TO 15 (User team)"  Grid.Column="0" Grid.ColumnSpan ="2"  Foreground="#FF39393A" FontFamily="Algerian"   VerticalContentAlignment="Center"  FontSize="10" Margin="20,0,0,0"/>
-                <ui:Button x:Name="ApplyButtonOverAllScript"    Grid.Column="1" Content="Apply" Height="32" Width="90" Appearance="Info" Background="#FF39393A" FontFamily="Algerian" Click="ApplyButtonOverAllScript_Click"  />
-            </Grid>
-            <Grid Margin="0,15,0,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
-                <Label Content="Set All Players Overall to 99 (User team)"  Grid.Column="0" Grid.ColumnSpan ="2"  Foreground="#FF39393A" FontFamily="Algerian"   VerticalContentAlignment="Center"  FontSize="10" Margin="20,0,0,0"/>
-                <ui:Button x:Name="ApplyButtonAgeScript"   Grid.Column="1" Content="Apply" Height="32" Width="90" Appearance="Info" Background="#FF39393A" FontFamily="Algerian" Click="ApplyButtonAgeScript_Click"  />
-            </Grid>
+        Title="FIFA 23 Career Mode Scripts" Height="382" Width="490" Background="#FFEDE7E7" WindowCornerPreference="Default" ExtendsContentIntoTitleBar="False" Icon="/icons8-script-64.png" ResizeMode="NoResize" >
+    <Border BorderBrush="#FF03000C" BorderThickness="2">
+        <Border.Effect>
+            <DropShadowEffect/>
+        </Border.Effect>
+        <Grid Background="#FFF7F5F5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.41*" />
+                <RowDefinition Height="2*" />
+                <RowDefinition Height="0.5*" />
 
 
+            </Grid.RowDefinitions>
 
 
-        </StackPanel>
+            <Menu Grid.Row="0" Grid.ColumnSpan="2" Height="48" Name="menu1" Width="496" HorizontalAlignment="Left" VerticalAlignment="Top" BorderThickness="1,1,1,1" RenderTransformOrigin="0.817,7.003" Foreground="#FFF9F9F9" Background="#FF39393A" ClipToBounds="True">
+                <ui:MenuItem x:Name="File" Header="_File" Margin="10,0,0,0" VerticalAlignment="Top"  Background="#FFFBFBFB" StaysOpenOnClick="True">
+                    <ui:MenuItem x:Name="OpenButton" Header="_Open" Click="OpenButton_Click"/>
+                    <ui:MenuItem x:Name="SaveButton" Header="_Save" Click="SaveButton_Click" />
+                </ui:MenuItem>
+                <ui:MenuItem x:Name="ExitButton" Header="_Exit" Margin="10,0,0,0" Click="ExitButton_Click" />
 
-        <Label Grid.Column ="0" Grid.Row="2" Content="Status"  Margin="52,15,136,15"  Foreground="#FFB6B6D8" Height="29" FontFamily="Algerian" VerticalContentAlignment="Center" FontSize="9"/>
-        <ui:TextBox x:Name="statusTextBox" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="98,0,0,0" TextWrapping="Wrap" Width="299" Background="#FFB99696" Height="34" OverridesDefaultStyle="True" IsReadOnly="True" ClearButtonEnabled="False" MinWidth="300" MaxWidth="302" ScrollViewer.CanContentScroll="True" UseLayoutRounding="True" Foreground="WhiteSmoke" FontSize="12" FontFamily="Arial" RenderTransformOrigin="0.5,0.5"/>
+            </Menu>
+            <Border Grid.ColumnSpan="2" Grid.Row="1" BorderBrush="#FF39393A" BorderThickness="2" Margin="25,40,25,0">
+                <StackPanel  Orientation="Vertical">
+
+                    <Grid Margin="0,10,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <ui:Card Content="Set All Players to 99 (User team)"  Grid.Column="0"  Foreground="#FF39393A" FontFamily="Times New Roman"   VerticalContentAlignment="Center"  FontSize="13" Margin="20,10,0,0" HorizontalAlignment="Left" BorderThickness="1,3,1,1" VerticalAlignment="Top" Width="243" FontWeight="Bold"/>
+
+                        <ui:Button x:Name="ApplyButtonOverAllScript"    Grid.Column="1" Content="Apply" Height="32" Width="90" Appearance="Info" Background="#FF39393A" FontFamily="Algerian" Click="ApplyButtonOverAllScript_Click"  >
+                            <ui:Button.MouseOverBackground>
+                                <SolidColorBrush Color="#FF030C5A" Opacity="0.9"/>
+                            </ui:Button.MouseOverBackground>
+                            <ui:Button.Effect>
+                                <DropShadowEffect/>
+                            </ui:Button.Effect>
+                        </ui:Button>
+                    </Grid>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <ui:Card Content="Set All Players Age To 15 (User team)"  Grid.Column="0"  Foreground="#FF39393A" FontFamily="Times New Roman"   VerticalContentAlignment="Center"  FontSize="13" Margin="20,0,0,0" HorizontalAlignment="Left" BorderThickness="1,3,1,1" Width="243" FontWeight="Bold"/>
+
+                        <ui:Button x:Name="ApplyButtonAgeScript"   Grid.Column="1" Content="Apply" Height="32" Width="90" Appearance="Info" Background="#FF39393A" FontFamily="Algerian" Click="ApplyButtonAgeScript_Click"  >
+                            <ui:Button.MouseOverBackground>
+                                <SolidColorBrush Color="#FF030C5A" Opacity="0.9"/>
+                            </ui:Button.MouseOverBackground>
+                            <ui:Button.Effect>
+                                <DropShadowEffect/>
+                            </ui:Button.Effect>
+                        </ui:Button>
+                    </Grid>
+                </StackPanel>
+            </Border>
+
+            <Label Grid.Column ="0" Grid.Row="2" Content="Status:"  Margin="56,17,114,13"  Foreground="#FF39393A" Height="29" FontFamily="Algerian" VerticalContentAlignment="Center" FontSize="9"/>
+            <ui:TextBox x:Name="statusTextBox" Grid.Row="2" Grid.ColumnSpan="2" HorizontalAlignment="Left" Margin="98,0,0,0" TextWrapping="Wrap" Width="299" Background="#FF39393A" Height="34" OverridesDefaultStyle="True" IsReadOnly="True" ClearButtonEnabled="False" MinWidth="300" MaxWidth="302" ScrollViewer.CanContentScroll="True" UseLayoutRounding="True" Foreground="WhiteSmoke" FontSize="12" FontFamily="Arial" RenderTransformOrigin="0.5,0.5" IsEnabled="False"/>
+            <ui:TextBox x:Name="textBox" HorizontalAlignment="Left" Grid.Row="1" TextWrapping="Wrap" Text="Scripts"  Width="74" Foreground="White" Margin="10,20,0,0" VerticalAlignment="Top" Height="37" Background="#FF39393A" FontFamily="Algerian" FontSize="12" SelectionBrush="#FF01121F" IsReadOnly="True"  ClearButtonEnabled="False" IsEnabled="False" SelectionOpacity="1">
+                <ui:TextBox.Effect>
+                    <DropShadowEffect/>
+                </ui:TextBox.Effect>
+            </ui:TextBox>
 
 
 
 
 
-    </Grid>
+
+        </Grid>
+    </Border>
 </ui:UiWindow>
